# reddish

./: .flake8  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: linting_and_testing.yml  pypi_release.yml
reddish/: __init__.py  _command.py  _core.py  _errors.py  _parser.py  _redis.py  _sansio.py  _templating.py  _typing.py  _utils.py
reddish/core/: __init__.py  command.py  multiexec.py
reddish/models/: __init__.py  _basic.py
reddish/trio/: __init__.py  _client.py
src/reddish/: __init__.py  _errors.py  _sansio.py  _utils.py
src/reddish/_core/: command.py  command.pyi  errors.py  multiexec.py  multiexec.pyi  parser.py  sansio.py  supported_commands.py  templating.py  typing.py  utils.py
src/reddish/backends/: _client_stubs.py  _client_stubs.pyi
src/reddish/backends/anyio/: _client.py  _client.pyi
src/reddish/backends/asyncio/: _client.py  _client.pyi
src/reddish/backends/socket/: __init__.py  _client.py  _client.pyi
src/reddish/backends/trio/: _client.py  _client.pyi
src/reddish/clients/anyio/: _client.pyi
src/reddish/clients/asyncio/: _client.pyi
src/reddish/clients/socket/: __init__.py  _client.pyi
src/reddish/clients/trio/: _client.pyi
src/reddish/core/: __init__.py  command.py  multiexec.py
src/reddish/models/: __init__.py  _basic.py
src/reddish/socket/: _client.py
src/reddish/trio/: __init__.py  _client.py
tests/: conftest.py  strategies.py  test_RedisSansIO.py  test_command.py  test_parser.py  test_redis.py  test_templating.py  test_utils.py
tests/anyio/: test_anyio.py
tests/asyncio/: test_asyncio.py
tests/socket/: test_socket.py
tests/trio/: test_trio.py
type_checking/: check_async_redis.py  check_commands.py  check_sync_redis.py
