[tool.poetry]
name = "reddish"
version = "0.1.0"
description = "An async redis client library with a minimal api"
authors = ["Sascha Desch <sascha.desch@hotmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
trio = "^0.19.0"
pydantic = "^1.8.2"
hiredis = "^2.0.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
hypothesis = "^6.17.1"
pytest-trio = "^0.7.0"
flake8 = "^4.0.1"
mypy = "^0.910"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
