[tool.poetry]
name = "reddish"
version = "0.4.0"
description = "An async redis client library with a minimal api"
keywords = ["redis"]
authors = ["Sascha Desch <sascha.desch@hotmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/stereobutter/reddish"

[tool.poetry.dependencies]
python = "^3.7"
trio = {version="^0.19.0", optional=true}
pydantic = "^1.8.2"
hiredis = "^2.0.0"

[tool.poetry.extras]
trio = ["trio"]

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
hypothesis = "^6.17.1"
pytest-trio = "^0.7.0"
flake8 = "^4.0.1"
mypy = "^0.910"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
