[tool.pdm]
[tool.pdm.version]
source = "scm"

[tool.pdm.dev-dependencies]
dev = [
    "pytest>=7.2.2",
    "hypothesis>=6.70.0",
    "pytest-trio>=0.8.0",
    "flake8>=5.0.4",
    "black>=23.1.0",
    "pyright>=1.1.320",
]

[project]
name = "reddish"
description = "Friendly redis client library with minimal API"
authors = [
    {name = "sascha.desch@hotmail.com", email = "sascha.desch@hotmail.com"},
]
dependencies = [
    "hiredis>=2.2.2",
    "pydantic>=1.10.6",
    "outcome>=1.2.0",
]
requires-python = ">=3.7"
readme = "README.md"
license = {text = "MIT"}
dynamic = ["version"]

[project.optional-dependencies]
trio = [ 'trio >= 0.19.0' ]

[build-system]
requires = ["pdm-pep517>=1.0"]
build-backend = "pdm.pep517.api"
